--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     <name>klammern-projekt</name>
     <packaging>pom</packaging>
 
+    <properties>
+        <java.version>21</java.version>
+        <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
+        <node.version>v20.10.0</node.version>
+    </properties>
+
     <modules>
         <module>frontend</module>
         <module>backend</module>
