--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+## PostgreSQL
+spring.datasource.hikari.connectionTimeout=2000
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.url=jdbc:postgresql://localhost:8090/postgres
+spring.datasource.username=postgres
+spring.datasource.password=docker
+spring.jpa.show-sql=true
