--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -34,7 +34,7 @@
     </dependencies>
 
     <build>
-        <finalName>klammern</finalName>
+        <finalName>klammern-projekt</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
