--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,12 @@
             <groupId>org.postgresql</groupId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+        </dependency>
     </dependencies>
 
     <build>
