--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -23,6 +23,7 @@
                         </goals>
                         <configuration>
                             <nodeVersion>${node.version}</nodeVersion>
+                            <npmVersion>${npm.version}</npmVersion>
                         </configuration>
                     </execution>
                     <execution>
