--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
     <properties>
         <java.version>21</java.version>
         <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
-        <node.version>v20.10.0</node.version>
+        <node.version>v22.0.0</node.version>
+        <npm.version>10.7.0</npm.version>
     </properties>
 
     <modules>
