Anbindung von SpringDoc

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:8090/postgres
 spring.datasource.username=postgres
 spring.datasource.password=docker
 spring.jpa.show-sql=true
+## springdoc
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
