--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
         <node.version>v22.0.0</node.version>
         <npm.version>10.7.0</npm.version>
+        <lombock.version>1.18.32</lombock.version>
+        <springdoc.version>2.8.3</springdoc.version>
     </properties>
 
     <modules>
